force-app/main/default/objects/Warranty_Registration__c/Warranty_Registration__c.object-meta.xml
<CustomObject>
    <label>Warranty Registration</label>
    <nameField>
        <displayFormat>WR-{0000}</displayFormat>
        <label>Warranty Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>