force-app/main/default/objects/Warranty_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Warranty Registrations</relationshipLabel>
    <relationshipName>Warranty_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>