force-app/main/default/objects/Warranty_Registration__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Warranty Registrations</relationshipLabel>
    <relationshipName>Warranty_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>