force-app/main/default/objects/Warranty_Registration__c/fields/Registration_Channel__c.field-meta.xml
<CustomField>
    <fullName>Registration_Channel__c</fullName>
    <label>Registration Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>