force-app/main/default/objects/Warranty_Registration__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <unique>true</unique>
    <required>true</required>
    <type>Text</type>
</CustomField>